# bengine

./: .gitignore  Makefile  Makefile.am  Makefile.in  configure.ac
data/logs/: logmain
include/: berror.h  camera.h  edefs.h  engnode.h  frustum.h  light.h  mesh.h  program.h  shader.h  texture.h  viewport.h
modules/beng/: Makefile.am
modules/beng/include/: beng.h  camera.h  edefs.h  engnode.h  frustum.h  light.h  material.h  renderer.h  texture.h  viewport.h
modules/beng/shaders/: default.frag  default.vert  minimal.frag  no_light.frag
modules/beng/src/: engnode.cpp  frustum.cpp  light.cpp  material.cpp  program.cpp  renderer.cpp  shader.cpp  texture.cpp
shaders/: default.frag  minimal.vert  no_light.frag.old
src/: berror.cpp  camera.cpp  frustum.cpp  main.cpp  mesh.cpp  program.cpp  renderer.cpp  texture.cpp  viewport.cpp
